CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(LandscapeMaker)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_C_STANDARD 11)

FIND_PACKAGE(Qt5Widgets REQUIRED)

SET(STELLARIUM_SOURCE_DIR $ENV{STELROOT})

INCLUDE_DIRECTORIES(
    ${STELLARIUM_SOURCE_DIR}/src
    ${STELLARIUM_SOURCE_DIR}/src/core
)

ADD_SUBDIRECTORY(src)

# Building
IF(APPLE)
    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/Library/Application\ Support/Stellarium)
ElSE(APPLE)
    SET(CMAKE_INSTALL_PREFIX $ENV{HOME}/.stellarium)
ENDIF(APPLE)

INSTALL(FILES "${CMAKE_BINARY_DIR}/src/libLandscapeMaker.so" DESTINATION "modules/LandscapeMaker")

